#51 Fix glitch when left menu is collapsed

--- a/VueJs.Picnic.CSharp/ClientApp/assets/custom_picnic.scss
+++ b/VueJs.Picnic.CSharp/ClientApp/assets/custom_picnic.scss
@@ -174,6 +174,10 @@ article.card {
         color: #eee;
         background: $blue;
       }
+
+      span.collapsed {
+        color: transparent;  width:0px !important;
+      }
     }
   }
 }
